# skill-doctor

./: CHANGELOG.md  CONTRIBUTING.md  GITHUB_UPLOAD.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: release-checklist.md
docs/distribution/: launch-post.md  marketplace.md
docs/releases/: v0.1.0.md
examples/: skill-doctor.config.json
examples/good-skills/focused-review/: SKILL.md
examples/good-skills/focused-review/references/: checklist.md
examples/problematic-skills/api-quality/: SKILL.md
examples/problematic-skills/api-review/: SKILL.md
examples/problematic-skills/bad-name/: SKILL.md
examples/problematic-skills/bad-name/scripts/: helper.py
examples/problematic-skills/broad-helper/: SKILL.md
scripts/: make-release-zip.ps1  publish-github.ps1  record-demo.ps1  verify-release.ps1
skill_doctor/: __init__.py
skills/skill-doctor/: SKILL.md
skills/skill-doctor/references/: finding-codes.md
skills/skill-doctor/scripts/: run_skill_doctor.py
src/skill_doctor/: __init__.py  analyzer.py  cli.py  config.py  discovery.py  frontmatter.py  models.py  reporting.py
tests/: test_analyzer.py  test_cli.py  test_discovery.py  test_frontmatter.py  test_release_assets.py  test_reporting.py
